# amifast

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
amifast/: __init__.py  bench.py  dtypes.py  format.py  utils.py
amifast/collectors/: collector.py  file_system_collector.py
amifast/config/: __init__.py
amifast/decorators/: decorators.py
benchit/: __init__.py  _io.py  bench.py  dabble.py  dabble2.py  dabble3.py  decorators.py  dtypes.py  format.py  io.py  stats.py  system.py  test_bench.py  test_decorator.py  test_dtypes.py  test_format.py  test_stats.py  test_system.py  utils.py  visualize.py
benchit/collectors/: __init__.py  collector.py  file_system_collector.py
benchit/config/: __init__.py  argument_parser.py
benchit/decorators/: __init__.py  decorators.py
examples/: .gitignore  README.md  decorator_vs_functional.py  function_as_string.py  function_with_args.py  function_with_args_kwargs.py
tests/: test_bench.py  test_decorator.py  test_dtypes.py  test_format.py  test_stats.py  test_system.py  test_utils.py
