[metadata]
name = amifast
description = amifast: simple powerful benchmarking with Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sleighsoft/amifast
project_urls =
    Source=https://github.com/sleighsoft/amifast
    Tracker=https://github.com/sleighsoft/amifast/issues
author = Julian Niedermeier
author_email = jpniedermeier@gmail.com
license = MIT license
license_file = LICENSE
keywords = test, unittest
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: System :: Benchmark
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platforms = unix, linux, osx, cygwin, win32

[options]
packages =
    amifast
install_requires =
    py-cpuinfo
python_requires = >=3.5
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
    amifast=amifast:main

[bdist_wheel]
universal = True

# [coverage:run]
# plugins = covdefaults

[build_sphinx]
source-dir = doc/en/
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/en/build/html

# [check-manifest]
# ignore =
#   src/_pytest/_version.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = amifast
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
